# ecfr-analyzer

./: .env.sample  .gitignore  CHALLENGE.md  FAKE_DATA_README.md  README_CFR_JSON.md  SYSTEM_DESIGN.md  TIMECARD.md  agency_fetch_progress.txt  alembic.ini  poetry.toml  pyproject.toml  run.py
alembic/: env.py
alembic/versions/: 021aecd5023e_updating_metrics_based_on_our_approach_.py  0486cd13e285_remove_content_snapshot.py  10e0055128ce_create_agency_title_search_descriptors_.py  3e1c58d4dff4_create_agency_document_counts.py  567aa2c2e029_create_document_contents_table.py  ad922f26625a_add_metrics_model.py  c3da4b874c93_add_target_year.py  c7d68490dd16_add_processing_status_to_search_.py  dda9905c6f0f_add_a_agency_id_where_its_missing.py  f10cd46d9e72_create_agency_table.py
app/: database.py  main.py
app/api/: agencies.py  api.py  documents.py  metrics.py
app/crud/: __init__.py  metrics.py
app/database/: connection.py  init_db.py
app/models/: __init__.py  agency.py  agency_document_count.py  document.py  document_content.py  metrics.py  search_descriptor.py
app/schemas/: __init__.py  agency.py  agency_document_count.py  document_content.py  metrics.py  search_descriptor.py
app/services/: document_service.py  ecfr_api.py  metrics_service.py  proxy_manager.py  proxy_service.py  xml_processor.py  (+1 more)
scripts/: README.md  analyze_metrics_data.py  clean_metrics_data.py  convert_cfr_xml_to_json.py  download_cfr_bulk_data.sh  fetch_all_agency_documents.sh  fetch_all_docs.sh  generate_fake_documents.py  generate_fake_metrics.py  init_alembic.py  lookup_cfr_section.py
(+2 files in other folders)
