[tool.poetry]
name = "ecfr-analyzer"
version = "0.1.0"
description = "A tool for analyzing the Electronic Code of Federal Regulations"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "^3.11.11"
fastapi = "^0.104.0"
uvicorn = "^0.23.2"
sqlalchemy = "^2.0.22"
pydantic = "^2.4.2"
requests = "^2.31.0"
psycopg2 = "^2.9.10"
alembic = "^1.12.0"
python-dotenv = "^1.0.0"
beautifulsoup4 = "^4.13.3"
tqdm = "^4.67.1"
lxml = "^5.3.1"
faker = "^36.2.2"
pandas = "^2.2.3"
numpy = "^2.2.3"
matplotlib = "^3.10.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.2"
black = "^23.10.0"
isort = "^5.12.0"
flake8 = "^6.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py38']

[tool.isort]
profile = "black"
line_length = 88

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py" 